# Magnetic-Field-Simulator

./: .gitignore  README.md
Manet Field Simulator/: CMakeLists.txt  main.cpp
Manet Field Simulator/Magnets/Include/: cubicmagnet.h  cylindermagnet.h  defaultmagnet.h  helpfunctions.h  magnetinterface.h
Manet Field Simulator/Magnets/Src/: cubicmagnet.cpp  cylindermagnet.cpp  defaultmagnet.cpp  helpfunctions.cpp
Manet Field Simulator/OpenGL/: CMakeLists.txt
Manet Field Simulator/Sensors/Include/: sensor.h
Manet Field Simulator/Sensors/Src/: sensor.cpp
Simulator/: CMakeLists.txt  main.cpp
Simulator/Magnets/Include/: cubicmagnet.h  cylindermagnet.h  defaultmagnet.h  helpfunctions.h  magnetinterface.h
Simulator/Magnets/Src/: cubicmagnet.cpp  cylindermagnet.cpp  defaultmagnet.cpp  helpfunctions.cpp
Simulator/Meshes/Include/: cubegenerator.h  cylindergenerator.h  gridgenerator.h  mesh.h
Simulator/Meshes/Src/: cubegenerator.cpp  cylindergenerator.cpp  gridgenerator.cpp  mesh.cpp
Simulator/OpenGL/: CMakeLists.txt
Simulator/OpenGL/OpenGL/: cmake_install.cmake
Simulator/OpenGL/include/glad/: glad.h
Simulator/OpenGL/src/: glad.c
Simulator/Sensors/Include/: sensor.h
Simulator/Sensors/Src/: sensor.cpp
Simulator/Visualizer/Include/: callbacks.h  camera.h  inputhandler.h  renderer.h  sceneobject.h  visualizer.h  visualizerinput.h
Simulator/Visualizer/Shaders/Dynamic/: dynamic.frag  dynamic.vert
Simulator/Visualizer/Shaders/Include/: shader.h
Simulator/Visualizer/Shaders/Src/: shader.cpp
Simulator/Visualizer/Shaders/Static/: grid.vert  triangle.frag
Simulator/Visualizer/Src/: callbacks.cpp  camera.cpp  inputhandler.cpp  renderer.cpp  sceneobject.cpp  visualizer.cpp  visualizerinput.cpp
